more MIPS crud  -- thanks Jim Gifford and Ryan Oliver
begin prep for setuid
top: fix %CPU max on 2..9 CPU SMP -- thanks Ga*tan LEURENT  rh110555
ps: fix crash related to realloc -- thanks David Houlder
ps: man page more detailed                         #334682
spelling fixes                       #300333 #334684 #334685
top: crash on resize fixed -- thanks Michal Maruska   #320289

procps-3.2.4 --> procps-3.2.5

display problem on 64-bit systems fixed   #287947
top: variable-width PID and PPID
top: variable-width %CPU                   rh110555
sysctl: better error messages
ps: security labels can contain any printable ASCII
top: help and version message on stdout, with exit(0)    #283541
ps: SIGTSTP and SIGTTOU shouldn't print bug email address    #246123
slabtop: compile with glibc 2.2.17 (and older, likely)
slabtop: fix overflow on huge NUMA boxes                #264640
slabtop: accept any slabinfo 2.x format        g77301  #287691 rh145369 rh145906
ps: alignment after WCHAN fixed                            ub5385
pmap: when no -x or -d option, show full path        rh142751

procps-3.2.3 --> procps-3.2.4

support 64-bit MIPS with n32 binary
sparc32 optimized for sparc32 again
pwdx: new command -- thanks Nicholas Miell
ps: UTF-8 username + command -- thanks Karel Zak rh134763,rh112518,rh134780
ps: more room for some columns
ps: tolerate SubDomain security module CONTEXT/LABEL data    #277401
watch: passes COLUMNS and LINES in environment
top: in batch mode, tolerate unknown $TERM -- thanks Daniel Walsh
pkill: quiet about processes that die before kill()

procps-3.2.2 --> procps-3.2.3

avoid truncating long usernames
avoid warning about -lncurses when not linking (more)
new names for shared libraries (packagers: watch out!)
"make install" no longer rebuilds everything
wchan now '*' for multi-threaded processes
ps: new man page -- thanks Nicolas Francois
ps: STAT shows l for multi-threaded processes
vmstat: some overflow problems fixed -- thanks Holger Kiehl